@@ -23,6 +23,7 @@ Change Log:
 - Fixed: Invoices with no gateways no longer checked by cron and not automatically marked PAID
 - Fixed: Editing Subscription detailes for administrators.
 - Fixed: Stripe API upgraded
+- Fixed: Export for free version
 - Other minor enhancements/fixes
 
 1.0.3.5
